<resources>
    <string name="app_name">TotalStreamer</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="remember_password">Remember Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="recover_password">Recover Password</string>
    <string name="enter_your_email_address_to_begin">Enter your email address to begin.</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="age">Age</string>
    <string name="fullname">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_twitch_channel">TwitchChannelActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="licenses_content"> PLEASE READ THESE TERMS OF SERVICE CAREFULLY, INCLUDING THE MANDATORY ARBITRATION PROVISION WHICH (IF YOU ARE RESIDENT IN THE USA OR ELSEWHERE IN THE WORLD, BUT NOT IF YOU ARE A CONSUMER IN THE EUROPEAN UNION) REQUIRES THAT DISPUTES ARE RESOLVED BY FINAL AND BINDING ARBITRATION ON AN INDIVIDUAL AND NOT A CLASS-WIDE OR CONSOLIDATED BASIS.

Welcome to the game video management and streaming platform operated by Twitch Interactive, Inc. (" Twitch ") consisting of the web site available at the URL http://www.twitch.tv and all related services, software applications and networks that allow for the authorized streaming and distribution of game video content over the internet (the " Twitch Service "). The Twitch Service also includes any other sites or services that link to these terms of service (the " Terms of Service "). Other services offered by Twitch may be subject to separate terms (in which case we will let you know what terms will apply to those services).

The following Terms of Service for the Twitch Service is a legal contract between you, an individual user of at least 13 years of age (see section 2 below about minors using Twitch) or a single entity ("you"), and Twitch regarding your use of the Twitch Service.

Twitch may offer certain additional services for which you can agree to pay fees to Twitch. The applicable terms will be made available on the applicable Twitch web page and will supplement these Terms of Service. If you register and/or use any such paid fee services, you will be asked to agree to and comply with the Twitch Terms of Sale. The Twitch Terms of Sale is hereby incorporated by reference (this means legally that they form a part of these Terms of Service).

PLEASE READ THESE TERMS OF SERVICE CAREFULLY. BY REGISTERING FOR, ACCESSING, BROWSING, DOWNLOADING FROM OR USING THE TWITCH SERVICE, YOU ACKNOWLEDGE THAT YOU HAVE READ, UNDERSTOOD, AND AGREE TO BE BOUND BY THESE TERMS OF SERVICE. IF AT ANY TIME YOU DO NOT AGREE TO THESE TERMS OF SERVICE, PLEASE IMMEDIATELY TERMINATE YOUR USE OF THE TWITCH SERVICE OR, IF YOU ARE A CONSUMER RESIDENT IN THE EUROPEAN UNION, CONTACT US AT LEGAL@TWITCH.TV TO DISCUSS ANY CONCERNS YOU MAY HAVE REGARDING THESE TERMS OF SERVICE.

IF YOU ARE USING OR OPENING AN ACCOUNT WITH TWITCH ON BEHALF OF A COMPANY, ENTITY, OR ORGANIZATION (COLLECTIVELY, A " SUBSCRIBING ORGANIZATION ") THEN YOU REPRESENT AND WARRANT THAT YOU: (I) ARE AN AUTHORIZED REPRESENTATIVE OF THAT SUBSCRIBING ORGANIZATION WITH THE AUTHORITY TO BIND SUCH ORGANIZATION TO THESE TERMS OF SERVICE; (II) HAVE READ THE FOREGOING TERMS; (III) UNDERSTAND THESE TERMS OF SERVICE, AND (IV) AGREE TO THESE TERMS OF SERVICE ON BEHALF OF SUCH SUBSCRIBING ORGANIZATION. </string>

    <string name="facebook_app_id">348354328861346</string>

    <string name="fb_login_protocol_scheme">fb348354328861346</string>
</resources>
